--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
   <head>
     <title>PPT SERVER</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
     <style>
+/*
       * { margin: 0; padding: 0; box-sizing: border-box; }
       body { font: 13px Helvetica, Arial; }
       form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
@@ -12,6 +14,7 @@
       #messages { list-style-type: none; margin: 0; padding: 0; }
       #messages li { padding: 5px 10px; }
       #messages li:nth-child(odd) { background: #eee; }
+      */
     </style>
     <link rel="stylesheet" type="text/css" href="animations.css">
     <link rel="stylesheet" type="text/css" href="component.css">
@@ -177,7 +180,7 @@
     </div>
     <script src="/socket.io/socket.io.js"></script>
     <script src="rule.js"></script>
-    <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+    <script src="jquery.js"></script>
     <script src="modernizr.custom.js"></script>
     <script src="jquery.dlmenu.js"></script>
     <script src="pagetransitions.js"></script>
