--- a/public/ppt/koa/koa3.html
+++ b/public/ppt/koa/koa3.html
@@ -6,6 +6,7 @@
         <pre><code>$ npm install koa</code></pre>
         <p>  为了方便，可以将 <code>node</code> 设置为默认启动 harmony 模式的别名：</p>
         <pre><code>alias node='node --harmony'</code></pre>
+        <code style="color:red;">  可以使用iojs,则不需要加harmony</code>
         <p>  还可以使用 <a href="https://github.com/TooTallNate/gnode">gnode</a> 运行程序, 但执行效率会较低.</p>
     </div>
 </section>
